removed dead code

--- a/blogs/blog.1.html
+++ b/blogs/blog.1.html
@@ -43,41 +43,24 @@
       color: #333;
       padding: 20px;
       border-radius: 10px;
-      border: 1px solid #ddd; /* Added border */
+      border: 1px solid #ddd; 
     }
     .sidebar h2 {
       margin-top: 0;
     }
-    /* Custom styles for the content */
     .content {
       padding: 20px;
     }
     .content h1 {
       color: #333;
     }
-    /* Custom style to align sidebar to the right */
     @media (min-width: 992px) {
       .right-sidebar {
         order: 1;
       }
     }
 
-    /* .footer {
-      background-color: #343a40;
-      color: #fff;
-      text-align: center;
-      padding: 20px 0;
-      bottom: 0;
-      width: 100%;
-    }
-
-    .footer a {
-      color: #fff;
-    }
-
-    .footer a:hover {
-      color: #007bff;
-    } */
+    
   </style>
 </head>
 
@@ -113,7 +96,6 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="blog.1.html">Introduction to SE</a></li>
               <li><a class="dropdown-item" href="blog2.html">Leadership</a></li>
-              <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
             </ul>
           </li>
         </ul>
@@ -258,7 +240,6 @@
                   <div class="d-flex align-items-center mb-3">
                     <p class="mb-0">
                       February 15, 2024
-                      <!-- <span class="badge bg-success">Approved</span> -->
                     </p>
                     <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                     <a href="#!" class="text-success"><i class="fas fa-redo-alt ms-2"></i></a>
@@ -283,7 +264,6 @@
                   <div class="d-flex align-items-center mb-3">
                     <p class="mb-0">
                       January 24, 2024
-                      <!-- <span class="badge bg-danger">Rejected</span> -->
                     </p>
                     <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                     <a href="#!" class="link-muted"><i class="fas fa-redo-alt ms-2"></i></a>
@@ -308,7 +288,6 @@
                   <div class="d-flex align-items-center mb-3">
                     <p class="mb-0">
                       January 30, 2024
-                      <!-- <span class="badge bg-primary">Pending</span> -->
                     </p>
                     <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                     <a href="#!" class="link-muted"><i class="fas fa-redo-alt ms-2"></i></a>
