--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/blogs/css/bootstrap-5.3.3-dist/css/bootstrap.css">
 
   <style>
-    /* Center the card horizontally */
+    
     .card{
    background-color: #FEFBF6;
     }
@@ -17,10 +17,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh; /* Make sure the card occupies the entire viewport height */
+      min-height: 100vh; 
     }
 
-    /* Add hover effect to cards */
     .card:hover {
       transform: translateY(-5px);
       transition: transform 0.3s ease;
@@ -31,19 +30,17 @@
       color: #333;
       padding: 20px;
       border-radius: 10px;
-      border: 1px solid #ddd; /* Added border */
+      border: 1px solid #ddd; 
     }
     .sidebar h2 {
       margin-top: 0;
     }
-    /* Custom styles for the content */
     .content {
       padding: 20px;
     }
     .content h1 {
       color: #333;
     }
-    /* Custom style to align sidebar to the right */
     @media (min-width: 992px) {
       .right-sidebar {
         order: 1;
@@ -83,7 +80,6 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="blog.1.html">Introduction to SE</a></li>
               <li><a class="dropdown-item" href="blog2.html">Leadership</a></li>
-              <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
             </ul>
           </li>
         </ul>
@@ -210,7 +206,6 @@
                   <div class="d-flex align-items-center mb-3">
                     <p class="mb-0">
                       February 28, 2024
-                      <!-- <span class="badge bg-primary">Pending</span> -->
                     </p>
                     <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                     <a href="#!" class="link-muted"><i class="fas fa-redo-alt ms-2"></i></a>
@@ -235,7 +230,6 @@
                   <div class="d-flex align-items-center mb-3">
                     <p class="mb-0">
                       February 15, 2024
-                      <!-- <span class="badge bg-success">Approved</span> -->
                     </p>
                     <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                     <a href="#!" class="text-success"><i class="fas fa-redo-alt ms-2"></i></a>
@@ -260,7 +254,6 @@
                   <div class="d-flex align-items-center mb-3">
                     <p class="mb-0">
                       January 24, 2024
-                      <!-- <span class="badge bg-danger">Rejected</span> -->
                     </p>
                     <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                     <a href="#!" class="link-muted"><i class="fas fa-redo-alt ms-2"></i></a>
@@ -285,7 +278,6 @@
                   <div class="d-flex align-items-center mb-3">
                     <p class="mb-0">
                       January 30, 2024
-                      <!-- <span class="badge bg-primary">Pending</span> -->
                     </p>
                     <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                     <a href="#!" class="link-muted"><i class="fas fa-redo-alt ms-2"></i></a>
