--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Branie's Blog</title>
   <link href="/blogs/css/bootstrap-5.3.3-dist/stylesheet.css" rel="stylesheet">
   <link rel="stylesheet" href="/blogs/css/bootstrap-5.3.3-dist/css/bootstrap.css">
 
