edited the links

--- a/blogs/gallery.html
+++ b/blogs/gallery.html
@@ -5,13 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Branie's Blog</title>
-    <link href="/blogs/css/bootstrap-5.3.3-dist/stylesheet.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="/blogs/css/bootstrap-5.3.3-dist/css/bootstrap.css">
-
-
-
-
+    <link href="css/bootstrap-5.3.3-dist/stylesheet.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-5.3.3-dist/css/bootstrap.css">
 </head>
 
 <body style="background-color: #F6F5F5;">
@@ -56,13 +51,13 @@
 <div class="row">
   <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
     <img mt-5
-      src="../blogs/images/galy9.jpeg"
+      src="images/galy9.jpeg"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Boat on Calm Water"
     />
 
     <img 
-      src="../blogs/images/galy6.jpeg"
+      src="images/galy6.jpeg"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Wintry Mountain Landscape"
     />
@@ -70,13 +65,13 @@
 
   <div class="col-lg-4 mb-4 mb-lg-0">
     <img
-      src="../blogs/images/galy7.jpeg"
+      src="images/galy7.jpeg"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Mountains in the Clouds"
     />
 
     <img
-      src="../blogs/galy15.avif"
+      src="images/galy15.avif"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Boat on Calm Water"
     />
@@ -84,13 +79,13 @@
 
   <div class="col-lg-4 mb-4 mb-lg-0">
     <img
-      src="../blogs/images/galy8.jpeg"
+      src="images/galy8.jpeg"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Waves at Sea"
     />
 
     <img
-      src="../blogs/images/galy13.jpeg"
+      src="images/galy13.jpeg"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Yosemite National Park"
     />
@@ -99,13 +94,13 @@
 <div class="row">
   <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
     <img
-      src="../blogs/images/galy12.png"
+      src="images/galy12.png"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Boat on Calm Water"
     />
 
     <img
-      src="../blogs/images/galy11.jpeg"
+      src="images/galy11.jpeg"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Wintry Mountain Landscape"
     />
@@ -113,13 +108,13 @@
 
   <div class="col-lg-4 mb-4 mb-lg-0">
     <img
-      src="../blogs/images/galy10.jpeg"
+      src="images/galy10.jpeg"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Mountains in the Clouds"
     />
 
     <img
-      src="../blogs/images/galy003.webp"
+      src="images/galy003.webp"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Boat on Calm Water"
     />
@@ -127,13 +122,13 @@
 
   <div class="col-lg-4 mb-4 mb-lg-0">
     <img
-      src="../blogs/images/galy001.webp"
+      src="images/galy001.webp"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Waves at Sea"
     />
 
     <img
-      src="/blogs/galy16.avif"
+      src="images/galy16.avif"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Yosemite National Park"
     />
@@ -180,7 +175,7 @@
   </footer>
 
   
-    <script src="/blogs/css/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="css/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
 
 </body>
 
