--- a/blogs/blog.1.html
+++ b/blogs/blog.1.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Branie's Blog</title>
-  <link href="/blogs/css/bootstrap-5.3.3-dist/stylesheet.css" rel="stylesheet">
-  <link rel="stylesheet" href="/blogs/css/bootstrap-5.3.3-dist/css/bootstrap.css">
+  <link href="css/bootstrap-5.3.3-dist/stylesheet.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/bootstrap-5.3.3-dist/css/bootstrap.css">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -342,7 +342,7 @@
     </div>
   </footer>
   
-  <script src="/blogs/css/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+  <script src="css/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
