added an index link

--- a/blogs/gallery.html
+++ b/blogs/gallery.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="aboutus.html">About Us</a>
@@ -115,7 +115,7 @@
 
     <img
       src="images/galy003.webp"
-      class="w-100 shadow-1-strong rounded mb-4"
+      class="w-70 shadow-1-strong rounded mb-4"
       alt="Boat on Calm Water"
     />
   </div>
@@ -127,11 +127,11 @@
       alt="Waves at Sea"
     />
 
-    <img
+    <!-- <img
       src="images/galy16.avif"
-      class="w-100 shadow-1-strong rounded mb-4"
+      class="w-70 shadow-1-strong rounded mb-4"
       alt="Yosemite National Park"
-    />
+    /> -->
   </div>
 </div>
 <!-- Gallery -->
@@ -145,7 +145,7 @@
       <div class="col-md-4">
         <h5>Quick Links</h5>
         <ul class="list-unstyled">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="contact.html">Contact</a></li>
